--- a/news/templates/news/submit.html
+++ b/news/templates/news/submit.html
@@ -6,15 +6,11 @@
 	<table>
 	{{ form.as_table }}
 	</table>
-	<button type="submit">enviar noticia</button>
+	<button type="submit">enviar nota</button>
 </form>
 <p>
-Deja la dirección URL vacía para enviar una pregunta o iniciar una discusión. Si no hay URL, el texto que coloques aparecerá abajo del título.
+	Deja la dirección URL vacía para enviar una pregunta o iniciar una discusión.<br>
+	Si no hay URL, el texto que coloques aparecerá abajo del título.
 </p>
-<!--
-<p>
-Puedes enviar noticias también con este <a href="{% url 'bookmarklet' %}">favorito</a> en tu navegador.
-</p>
--->
 </article>
 {% endblock content %}
