--- a/news/templates/news/__base.html
+++ b/news/templates/news/__base.html
@@ -15,10 +15,15 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="renderer" content="webkit|ie-comp|ie-stand">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="emoji" content="🎮">
+	<meta name="emoji" content="🛠️">
 
 	<link rel="stylesheet" type="text/css" href="{% static 'news.css'%}">
-	<link rel="icon" type="image/png" sizes="144x144" href="{% static 'icon.png' %}">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png'%}">
+	<link rel="icon" type="image/png" sizes="144x144" href="{% static 'favicon.ico' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+	<link rel="manifest" href="{% static 'site.webmanifest' %}">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +39,7 @@
 				<tbody>
 					<tr>
 						<td style="width:18px; padding-right:4px">
-							<a href={% url 'index' %}><img alt="MX Icon" src="{% static 'icon.png' %}" width="18" height="18" style="border:1px white solid; background-color: white;"></a>
+							<a href={% url 'index' %}><img alt="MX Icon" src="{% static 'favicon-16x16.png' %}" width="16" height="16" style="border:1px white solid; background-color: white;"></a>
 						</td>
 						<td style="line-height:12pt; height:10px;">
 							<span class="pagetop">
@@ -87,7 +92,7 @@
 		</nav>
 
 		<nav id="footer-bar">
-			<p class="footer-text">{{SITE_NAME}} es la comunidad para platicar sobre Desarrollo de Juegos en México, Latinoamérica y en español.</p>
+			<p class="footer-text">{{SITE_NAME}} es la comunidad de Makers latinos.</p>
 		</nav>
 	</main>
 <script type="text/javascript" src="{% static 'news.js'%}"></script>
