--- a/static/news.css
+++ b/static/news.css
@@ -51,10 +51,7 @@ tr.spacer { height:1em; }
 	color: #999;
 }
 
-/* td {border:1px solid red;} */
-
 /* Site layout */
-
 .container {
 	padding: 10px;
 	padding-left: 25px;
@@ -77,7 +74,6 @@ nav#pre-footer-bar > hr {
 }
 
 /* Item Layout */
-
 /* Forms */
 form.logout-form {
 	border: 0;
@@ -190,7 +186,7 @@ and (max-width : 750px) {
 
 	body        { font-size:12pt; color:#646464; }
 	td          { font-size:12pt; color:#646464; }
-	.smaller    { font-size:10pt; color:#45009a; }
+	.smaller    { font-size:10pt; color:#2c2c2c; }
 
 	button {
 		background-color: #e3e3e3;
